tests/negative/neg_pr1111b_missing_member.safe
package neg_pr1111b_missing_member

   type printable is interface
      function (self : printable) label returns string;

   type widget is record
      value : integer;

   function render (item : printable) returns string
      return item.label();

   function total returns integer
      item : widget = (value = 1);

      return render (item).length;
